16-ETL include local writer

--- a/etl/config.ini
+++ b/etl/config.ini
@@ -24,3 +24,6 @@ voxelgrid_random_rotation=True
 dataset_size_train=60
 dataset_size_test=10
 sequence_length=4
+
+[output]
+base_dir=/mnt/disks/data/etl
