change in output structure

--- a/etl/config.ini
+++ b/etl/config.ini
@@ -2,7 +2,7 @@
 input_type=pointcloud
 
 [DataReader]
-dataset_path=/mnt/disks/data/
+dataset_path=/srv/data/
 output_targets=height,weight
 
 
@@ -26,4 +26,4 @@ dataset_size_test=10
 sequence_length=4
 
 [output]
-base_dir=/mnt/disks/data/etl
+base_dir=/srv/data/etl
