simple visualization and first try at mp4 video generation from PCDs

--- a/etl/config.ini
+++ b/etl/config.ini
@@ -3,14 +3,14 @@ input_type=pointcloud
 
 [DataReader]
 dataset_path=/srv/data/
-output_targets=height,weight
+output_targets=height
 
 
 [pointcloud]
 output_targets=height
 random_seed=666
 pointcloud_target_size=30000
-pointcloud_random_rotation=True
+pointcloud_random_rotation=False
 dataset_size_train=10
 dataset_size_test=2
 sequence_length=4
