remove data loader and x-input

--- a/etl/config.ini
+++ b/etl/config.ini
@@ -3,7 +3,7 @@ input_type=pointcloud
 
 [DataReader]
 dataset_path=/srv/data/
-output_targets=height,weight
+output_targets=height
 
 
 [pointcloud]
